--- a/css/reset.css
+++ b/css/reset.css
@@ -57,6 +57,50 @@ video, img {width: 100%;}
 .clearfix::before, clearfix::after{display: block; content:''; line-height: 0;}
 .clearfix::after{clear:both;}
 
+/* input style */
+input {background-image: none;}
+input[type=button],
+input[type=reset],
+input[type=text],
+input[type=password],
+input[type=submit],
+input[type=search],
+input[type=tel],
+input[type=email] {
+    -webkit-appearance: none;
+    border-radius: 0
+}
+input[type=search]::-webkit-search-cancel-button,
+input[type=search]::-webkit-search-decoration {
+    -webkit-appearance: none
+}
+input:checked[type=checkbox] {
+    background-color: #666;
+    -webkit-appearance: checkbox
+}
+
+/* 셀렉트 메뉴 메인 스타일 */
+.ui_select2 {
+    width: 100%; box-sizing: border-box;
+    background: #2c2f34; color: #fff;
+    display: inline-block; height: 36px;
+    border: 0 none; padding: 0 10px; margin: 0;
+    font-family: inherit; font-size: inherit;
+    vertical-align: middle; text-align: left;
+    white-space: nowrap;
+    background: #2c2f34 url(../img/down.svg) no-repeat right 10px center; /* right로 10px 간격 */
+    background-size: 10px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+/* 메인 텍스트 박스 스타일1 */
+.ui_input3 {
+    background: #2c2f34; color: #fff; border: 0; width: 100%; height: 36px; padding: 0 10px;
+}
+
+
 /* 아이콘 이미지 최적화 작업 */
 .icon {background-image: url(../img/icon.png);}
 
