--- a/css/style.css
+++ b/css/style.css
@@ -966,14 +966,40 @@
         display: none;
     }
 
-    .help article{width: 49%; margin-right: 2%; height: auto;}
-    .help article:nth-child(2){width: 49%; margin: 0;}
-    .help article:last-child{width: 100%; margin-top: 2%;}
+    .help article {
+        width: 49%;
+        margin-right: 2%;
+        height: auto;
+    }
 
-    .service li{width: 25%; height: auto;}
-    .service li:nth-child(1){border-bottom: 1px solid #d7d7d7;}
-    .service li:nth-child(2){border-bottom: 1px solid #d7d7d7; border-right: 0;}
-    .service li a strong{display: block; padding-bottom: 10%;}
+    .help article:nth-child(2) {
+        width: 49%;
+        margin: 0;
+    }
+
+    .help article:last-child {
+        width: 100%;
+        margin-top: 2%;
+    }
+
+    .service li {
+        width: 25%;
+        height: auto;
+    }
+
+    .service li:nth-child(1) {
+        border-bottom: 1px solid #d7d7d7;
+    }
+
+    .service li:nth-child(2) {
+        border-bottom: 1px solid #d7d7d7;
+        border-right: 0;
+    }
+
+    .service li a strong {
+        display: block;
+        padding-bottom: 10%;
+    }
 }
 
 @media (max-width: 960px) {
@@ -1194,12 +1220,36 @@
         padding: 24px;
     }
 
-    #help .row{padding: 0 24px;}
-    .help article{width: 100%; padding: 24px; box-sizing: border-box; background: #fff; margin-right: 0; margin-top: 24px;}
-    .help article:nth-child(2){width: 100%; background: #fff; margin-top: 24px;}
-    .help article:last-child{background: #fff; margin-top: 24px; padding: 0;} 
-    .help article:last-child > div{height: auto;}
-    .help article h3{
+    #help .row {
+        padding: 0 24px;
+    }
+
+    .help article {
+        width: 100%;
+        padding: 24px;
+        box-sizing: border-box;
+        background: #fff;
+        margin-right: 0;
+        margin-top: 24px;
+    }
+
+    .help article:nth-child(2) {
+        width: 100%;
+        background: #fff;
+        margin-top: 24px;
+    }
+
+    .help article:last-child {
+        background: #fff;
+        margin-top: 24px;
+        padding: 0;
+    }
+
+    .help article:last-child > div {
+        height: auto;
+    }
+
+    .help article h3 {
         font-size: 24px;
         font-weight: 700;
         height: 27px;
@@ -1207,7 +1257,7 @@
         padding-bottom: 10px;
     }
 
-    .help article:last-child h3{
+    .help article:last-child h3 {
         display: none;
     }
 }
@@ -1474,23 +1524,40 @@
     }
 
 
-    #help .row{padding: 0 8px;}
-    .help article.help_box1,
-    .help article.help_box2,
-    .help article.help_box3{
-        margin-top: 8px; padding: 16px;
-    }
-    .help article h3{font-size: 18px; margin-bottom: 0;}
-    .card{padding: 8px;}
-    .service li{width: 50%; border: 1px solid #d7d7d7;}
-    .service li:nth-child(1){
-        border-bottom:0;
+    #help .row {
+        padding: 0 8px;
     }
 
-    .service li:nth-child(2){
+    .help article.help_box1,
+    .help article.help_box2,
+    .help article.help_box3 {
+        margin-top: 8px;
+        padding: 16px;
+    }
+
+    .help article h3 {
+        font-size: 18px;
+        margin-bottom: 0;
+    }
+
+    .card {
+        padding: 8px;
+    }
+
+    .service li {
+        width: 50%;
+        border: 1px solid #d7d7d7;
+    }
+
+    .service li:nth-child(1) {
+        border-bottom: 0;
+    }
+
+    .service li:nth-child(2) {
         border-right: 1px solid #d7d7d7;
     }
-    .service li:nth-child(4){
+
+    .service li:nth-child(4) {
         border-top: 0;
     }
 }
@@ -1502,18 +1569,54 @@
         margin-right: 9px;
     }
 
-    .notice{padding: 8px;}
-    .notice ul li ul{left: 9px; top: 56px;}
-    .notice ul li ul li{padding: 8px;}
-    .notice ul li a{padding: 5px 10px;}
-    .help article > div{height: 287px;}
-    .card ul li{padding: 8px; margin-bottom: 8px; min-height: 90px;}
-    .card ul li span img{width: 60px; top: 10px; left: 11px;}
-    .card ul li strong{
+    .notice {
+        padding: 8px;
+    }
+
+    .notice ul li ul {
+        left: 9px;
+        top: 56px;
+    }
+
+    .notice ul li ul li {
+        padding: 8px;
+    }
+
+    .notice ul li a {
+        padding: 5px 10px;
+    }
+
+    .help article > div {
+        height: 287px;
+    }
+
+    .card ul li {
+        padding: 8px;
+        margin-bottom: 8px;
+        min-height: 90px;
+    }
+
+    .card ul li span img {
+        width: 60px;
+        top: 10px;
+        left: 11px;
+    }
+
+    .card ul li strong {
         padding-left: 75px;
         font-size: 14px;
     }
-    .card ul li em{padding-left: 75px;}
-    .service li a span{width: 70px; height: 70px;}
-    .service li a strong{font-size: 14px;}
+
+    .card ul li em {
+        padding-left: 75px;
+    }
+
+    .service li a span {
+        width: 70px;
+        height: 70px;
+    }
+
+    .service li a strong {
+        font-size: 14px;
+    }
 }
